--- a/index.html
+++ b/index.html
@@ -553,6 +553,50 @@
         </div>
       </div>
     </section>
+    <!-- Recent Work -->
+<section id="gallery">
+  <div class="wrap">
+    <div class="sectionTitle">
+      <div>
+        <h2>Recent work</h2>
+        <p>A few examples of completed fencing, patios and lawn installations.</p>
+      </div>
+    </div>
+
+    <div class="grid">
+      <figure class="card" style="padding:12px;">
+        <img
+          src="assets/work-1.jpg"
+          alt="Timber fencing with fresh lawn and gravel edge"
+          loading="lazy"
+          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
+        />
+        <figcaption class="note" style="margin:10px 2px 0;">Fencing + turf finish</figcaption>
+      </figure>
+
+      <figure class="card" style="padding:12px;">
+        <img
+          src="assets/work-2.jpg"
+          alt="Patio installation with light stone slabs near house"
+          loading="lazy"
+          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
+        />
+        <figcaption class="note" style="margin:10px 2px 0;">Patios &amp; paving</figcaption>
+      </figure>
+
+      <figure class="card" style="padding:12px;">
+        <img
+          src="assets/work-3.jpg"
+          alt="Garden lawn with pathway and fencing on both sides"
+          loading="lazy"
+          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
+        />
+        <figcaption class="note" style="margin:10px 2px 0;">Landscaping + pathways</figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
+
 
     <!-- Areas -->
     <section id="areas">
@@ -722,6 +766,7 @@
           </div>
           <div class="footLinks" aria-label="Footer links">
             <a href="#services">Services</a>
+            <a href="#gallery">Recent Work</a>
             <a href="#areas">Service areas</a>
             <a href="#reviews">Reviews</a>
             <a href="#contact">Contact</a>
