--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     <div class="grid">
       <figure class="card" style="padding:12px;">
         <img
-          src="assets/work-1.jpg"
+          src="fenceandlawn.png"
           alt="Timber fencing with fresh lawn and gravel edge"
           loading="lazy"
           style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
@@ -576,7 +576,7 @@
 
       <figure class="card" style="padding:12px;">
         <img
-          src="assets/work-2.jpg"
+          src="slabs.png"
           alt="Patio installation with light stone slabs near house"
           loading="lazy"
           style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
@@ -586,7 +586,7 @@
 
       <figure class="card" style="padding:12px;">
         <img
-          src="assets/work-3.jpg"
+          src="garden.png"
           alt="Garden lawn with pathway and fencing on both sides"
           loading="lazy"
           style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
