--- a/index.html
+++ b/index.html
@@ -593,6 +593,29 @@
         />
         <figcaption class="note" style="margin:10px 2px 0;">Landscaping + pathways</figcaption>
       </figure>
+      <figure class="card" style="padding:12px;">
+  <img
+    src="fence1.jpg"
+    alt="Close board timber fencing installation"
+    loading="lazy"
+    style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
+  />
+  <figcaption class="note" style="margin:10px 2px 0;">
+    Close board fencing
+  </figcaption>
+</figure>
+
+<figure class="card" style="padding:12px;">
+  <img
+    src="fence2.jpg"
+    alt="Timber side gate and fencing installation"
+    loading="lazy"
+    style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
+  />
+  <figcaption class="note" style="margin:10px 2px 0;">
+    Side gate & fencing
+  </figcaption>
+</figure>
     </div>
   </div>
 </section>
