--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
       </figure>
       <figure class="card" style="padding:12px;">
   <img
-    src="fence1.jpg"
+    src="fence.jpg"
     alt="Close board timber fencing installation"
     loading="lazy"
     style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
