--- a/index.html
+++ b/index.html
@@ -353,6 +353,36 @@
       .btn, .fab a{ transition:none; }
       .btn:hover, .fab a:hover{ transform:none; }
     }
+    /* Horizontal scroll gallery (modern, mobile-first) */
+.scrollGallery{
+  display:grid;
+  grid-auto-flow:column;
+  grid-auto-columns: minmax(80%, 1fr);
+  gap:14px;
+  overflow-x:auto;
+  scroll-snap-type:x mandatory;
+  padding-bottom:6px;
+}
+
+.scrollGallery img{
+  scroll-snap-align:start;
+  width:100%;
+  height:320px;
+  object-fit:cover;
+  border-radius:18px;
+  background:#000;
+}
+
+/* Desktop refinement */
+@media (min-width: 900px){
+  .scrollGallery{
+    grid-auto-columns: minmax(420px, 1fr);
+  }
+  .scrollGallery img{
+    height:280px;
+  }
+}
+
   </style>
 </head>
 
@@ -554,71 +584,26 @@
       </div>
     </section>
     <!-- Recent Work -->
+<!-- Recent Work -->
 <section id="gallery">
   <div class="wrap">
     <div class="sectionTitle">
       <div>
         <h2>Recent work</h2>
-        <p>A few examples of completed fencing, patios and lawn installations.</p>
+        <p>Swipe to view recent fencing, patios and landscaping projects.</p>
       </div>
     </div>
 
-    <div class="grid">
-      <figure class="card" style="padding:12px;">
-        <img
-          src="fenceandlawn.png"
-          alt="Timber fencing with fresh lawn and gravel edge"
-          loading="lazy"
-          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
-        />
-        <figcaption class="note" style="margin:10px 2px 0;">Fencing + turf finish</figcaption>
-      </figure>
-
-      <figure class="card" style="padding:12px;">
-        <img
-          src="slabs.png"
-          alt="Patio installation with light stone slabs near house"
-          loading="lazy"
-          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
-        />
-        <figcaption class="note" style="margin:10px 2px 0;">Patios &amp; paving</figcaption>
-      </figure>
-
-      <figure class="card" style="padding:12px;">
-        <img
-          src="garden.png"
-          alt="Garden lawn with pathway and fencing on both sides"
-          loading="lazy"
-          style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
-        />
-        <figcaption class="note" style="margin:10px 2px 0;">Landscaping + pathways</figcaption>
-      </figure>
-      <figure class="card" style="padding:12px;">
-  <img
-    src="fence.jpg"
-    alt="Close board timber fencing installation"
-    loading="lazy"
-    style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
-  />
-  <figcaption class="note" style="margin:10px 2px 0;">
-    Close board fencing
-  </figcaption>
-</figure>
-
-<figure class="card" style="padding:12px;">
-  <img
-    src="fence2.jpg"
-    alt="Timber side gate and fencing installation"
-    loading="lazy"
-    style="border-radius:14px; width:100%; height:240px; object-fit:cover;"
-  />
-  <figcaption class="note" style="margin:10px 2px 0;">
-    Side gate & fencing
-  </figcaption>
-</figure>
+    <div class="scrollGallery">
+      <img src="fenceandlawn.jpg" alt="Timber fencing with fresh lawn" loading="lazy">
+      <img src="slabs.jpg" alt="Patio paving installation" loading="lazy">
+      <img src="garden.jpg" alt="Landscaped garden with pathway" loading="lazy">
+      <img src="fence.jpg" alt="Close board timber fencing" loading="lazy">
+      <img src="fence2.jpg" alt="Side gate and fencing installation" loading="lazy">
     </div>
   </div>
 </section>
+
 
 
     <!-- Areas -->
