--- a/index.html
+++ b/index.html
@@ -595,9 +595,9 @@
     </div>
 
     <div class="scrollGallery">
-      <img src="fenceandlawn.jpg" alt="Timber fencing with fresh lawn" loading="lazy">
-      <img src="slabs.jpg" alt="Patio paving installation" loading="lazy">
-      <img src="garden.jpg" alt="Landscaped garden with pathway" loading="lazy">
+      <img src="fenceandlawn.png" alt="Timber fencing with fresh lawn" loading="lazy">
+      <img src="slabs.png" alt="Patio paving installation" loading="lazy">
+      <img src="garden.png" alt="Landscaped garden with pathway" loading="lazy">
       <img src="fence.jpg" alt="Close board timber fencing" loading="lazy">
       <img src="fence2.jpg" alt="Side gate and fencing installation" loading="lazy">
     </div>
